@@ -1,3 +1,8 @@
+2009-09-04	Denis M. Gabaidulin
+
+	* main/Utils/DaoUtils.class.php: increment() method added to work
+	with "counter" fields in multithread environment.
+
 2009-08-30	Denis M. Gabaidulin
 
 	* main/Utils/ArrayUtils.class.php: mergeSortedLists() added.
